# fastapi2

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
src/: config.py  main copy.py  main.py  models.py
src/api/: index.py
src/controllers/: user_controller.py
src/services/: user_service.py
src/tests/: conftest.py  test_user.py  test_user_service.py
